jade/assets/stylesheets/style.css
@import url(//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css);

/* general stuff */
html body {
      font-family: 'Raleway', sans-serif;
      font-size: 16px;
}

p {
    margin-left: 40px;
    margin-right:40px;
}

/* ##########################
    Header - 'advanced'
#########################*/
 header {
        width: 100%;
        height: 150px;
        overflow: hidden;
        position: fixed;
        top: 0;
        left: 0;
        z-index: 999;
        background-color: #1e90ff;
        -webkit-transition: height 1.0s;
        -moz-transition: height 1.0s;
        -ms-transition: height 1.0s;
        -o-transition: height 1.0s;
        transition: height 1.0s;
}

/* title in regular mode */
header  .blogtitle {
         font-size: 48px;
         margin-top: 35px;
          text-overflow: ellipsis;
         white-space: nowrap;
          white-space: nowrap;
        overflow: hidden;
         }

/* new height when in smaller version */
header.smaller {
    height: 75px;
}

/* new blog title size when in small version */
header.smaller  .blogtitle {
        color: white;
         margin-top: 10px;
       text-overflow: ellipsis;
      white-space: nowrap;
       white-space: nowrap;
     overflow: hidden;
}

/* fix header for mobile devices */
@media only screen and (max-width: 720px) {

     header {
            width: 100%;
            height: 75px;
            overflow: hidden;
            position: fixed;
            top: 0;
            left: 0;
            z-index: 999;
    }
         header  .blogtitle {
        margin-left: 10px;
         margin-top: 35px;
         font-size: 26px;
         text-overflow: ellipsis;
           white-space: nowrap;
          overflow: hidden;
         }

         /* new blog title size when in small version */
         header.smaller  .blogtitle {
             margin-left: 10px;
                 color: white;
                text-overflow: ellipsis;
               white-space: nowrap;
                white-space: nowrap;
              overflow: hidden;
         }
}

#headerurl{
    color: white;
}

.text-left-title {
    padding-left: 40px;
    padding-top: 30px;
    font-size: 28px;
}

.text-left-title a {
        color: white;
}

.scroll-top{
    color: #fff;
    text-decoration: none;
    text-align: center;
    left: 50%;
    margin-bottom: 20px;
}

@media only screen and (max-width: 720px) {

/*
###############
 home page look and feel
###############
 */
    .container-fluid{
        margin:0;
        height: 100%;
        margin-bottom:30px;
    }

         .text-left-title {
             padding-left: 40px;
             padding-top: 60px;
             font-size: 18px;
         }

         /* margins of text */
         .row {
           margin-left: 0px;
           margin-right:0px;
         }

          /*
          ############
          Info modal
          ############
          */
            /* question mark - about this theme */
            #about {
                position: absolute;
                right: 10px;
                top: 10px;
            }

}

@media only screen and (min-width: 721px) {

    .container-fluid{
        margin:0;
        padding-top: 150px;
        height: 100%;
        margin-bottom:30px;
    }
         /* margins of text */
         .row {
           margin-left: 10%;
           margin-right:10%;
         }

          /*
          ############
          Info modal
          ############
          */
            /* question mark - about this theme */
            #about {
                position: fixed;
                right: 10px;
                top: 10px;
            }
}



 /*
 ###############
 Post related
 ##############
 */


 /* post headers */
 .modal-post {
     background-color: #1e90ff;
     color: #ffffff;
     height: 100%;
     overflow: hidden;
 }

/* dont expand images too far in excerpt */
article img {
    width: 100%;
}

/* size of date and tags in header */
.postdate {
    font-size: 16px;
    margin-top: 20px;
}

/* row below posts on index */
hr {
    margin-top: 25px;
    margin-bottom: 65px;
    border-width: 3px;
    color: #708090;
}

/* seperate articles a bit more */
article {
    margin-bottom: 35px;
}

/* read more link */
.readmore {
    float: right;
    color: #fff;
    background-color: #1e90ff;
    padding: 10px;
    margin-top: -15px;
    text-align: center;

}

.readmore:hover {
    text-decoration: none;
    color: #fff;
    background-color: #00bfff;
}

/* author info stuff at bottom of post */
.postfooter{
    background: #1e90ff;
    padding-top: 10px;
    padding-bottom: 10px;
    color: white;
    text-align: center;
}

.authorimage > img {
    width: auto;
}

/* pagination */
#pagination {
    text-align: center;
    bottom: 0;
}

.older-posts {
      background: #1e90ff;
      color: #fff;
      padding: 10px;
}

.older-posts:hover {
        color: #fff;
        background-color: #00bfff;
}

.newer-posts {
      background: #1e90ff;
      color: #fff;
      padding: 10px;
}

.newer-posts:hover {
        color: #fff;
        background-color: #00bfff;
}

